<resources>
    <string name="app_name">School App</string>
    <string name="txtTitle">Aberdeen Elementary Schools</string>
    <string name="txtAJWest">A.J. West Elementary School</string>
    <string name="txtDescription">Aberdeen has three Elementary Schools for your childhood Education needs. Click the Buttons below to find out more about each school!</string>
    <string name="txtMcDermoth">McDermoth Elementary</string>
    <string name="txtRobertGray">Robert Gray Elementary</string>
    <string name="txtAJWestAddress">ADDRESS: 1801 Bay Avenue, Aberdeen, WA 98520</string>
    <string name="txtAJWestPhone">PHONE: 360-538-2130</string>
    <string name="txtMcDermothAddress">ADDRESS: 409 North K Street, Aberdeen, WA 98520</string>
    <string name="txtMcDermothPhone">PHONE: 360-538-2120</string>
    <string name="txtRobertGrayAddress">ADDRESS: 1516 North B Street, Aberdeen, WA 98520</string>
    <string name="txtRobertGrayPhone">PHONE: 360-538-2140</string>
</resources>