<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="76dp"
        android:text="@string/txtTitle"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="211dp"
        android:text="@string/txtDescription"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnAJWest"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="443dp"
        android:text="@string/txtAJWest" />

    <Button
        android:id="@+id/btnMcDermoth"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="178dp"
        android:text="@string/txtMcDermoth" />

    <Button
        android:id="@+id/btnRobertGray"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="89dp"
        android:layout_marginBottom="116dp"
        android:text="@string/txtRobertGray" />
</RelativeLayout>