<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".McDermoth">

    <TextView
        android:id="@+id/txtMcDermoth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txtMcDermoth"
        android:textSize="35sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="281dp"
        android:layout_height="204dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="74dp"
        app:srcCompat="@drawable/bulldog" />

    <TextView
        android:id="@+id/txtMcDermothPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="321dp"
        android:text="@string/txtMcDermothPhone"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtMcDermothAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="367dp"
        android:text="@string/txtMcDermothAddress"
        android:textSize="25sp" />
</RelativeLayout>