<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AJWest">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="197dp"
        android:layout_height="183dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="102dp"
        app:srcCompat="@drawable/wildcats" />

    <TextView
        android:id="@+id/txtAJWest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="49dp"
        android:text="@string/txtAJWest"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtAJWestAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="340dp"
        android:text="@string/txtAJWestAddress"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtAJWestPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="302dp"
        android:text="@string/txtAJWestPhone"
        android:textSize="25sp" />
</RelativeLayout>