<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RobertGray">

    <TextView
        android:id="@+id/txtRobertGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtRobertGray"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/txtRobertGrayAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="370dp"
        android:text="@string/txtRobertGrayAddress"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtRobertGrayPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="368dp"
        android:text="@string/txtMcDermothPhone"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="216dp"
        android:layout_height="183dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="69dp"
        app:srcCompat="@drawable/robertship" />
</RelativeLayout>